# hhuTOSr

./: .gitignore  Cargo.toml  Makefile.toml  README.md  Zeitplanung.xlsx  bmp_hhu.c  cbmp2rs.c  consts.rs  gdbcommands  hhu_tosr_app.json  multiboot.rs  process.rs
os/: Cargo.toml  Makefile.toml  README.md  hhu_tosr.json  rust-toolchain.toml  startup.rs
os/.run/: Start Debugger.run.xml
os/devices/: pcspk.rs
os/kernel/: allocator.rs
os/kernel/allocator/: bump.rs  list.rs
os/kernel/processes/: process.rs  vma.rs
os/kernel/syscalls/: mod.rs  user_api.rs
os/src/: consts.rs  startup.rs
os/src/boot/: boot.asm  linker.ld
os/src/devices/: cga.rs  cga_print.rs  key.rs  keyboard.rs  kprint.rs  lfb.rs  mod.rs  pci.rs  pit.rs  serial.rs
os/src/kernel/: allocator.rs  cpu.rs  mod.rs  multiboot.rs
os/src/user/: mod.rs
os/user/aufgabe2/: heap_demo.rs  mod.rs  sound_demo.rs
src/: Cargo.toml  Makefile  hhu_tosr.json  startup.rs
src/devices/: keyboard.rs  pcspk.rs  pit.rs
src/kernel/: allocator.rs
src/kernel/corouts/: coroutine.asm  coroutine.rs  stack.rs
src/kernel/interrupts/: intdispatcher.rs  interrupts.asm
src/kernel/threads/: idle_thread.rs  scheduler.rs  thread.rs
src/lib/: mod.rs
src/mylib/: queue.rs
src/src/: Cargo.toml  startup.rs
src/src/boot/: boot.asm  linker.ld
src/src/devices/: cga.rs  cga_print.rs  key.rs  keyboard.rs  kprint.rs  mod.rs  pcspk.rs  pit.rs  serial.rs  vga.rs
src/src/kernel/: allocator.rs  cpu.rs  mod.rs
src/src/lib/: mod.rs
src/src/mylib/: input.rs  mod.rs  queue.rs  spinlock.rs
src/vorgabe1/: hhu_tosr.json
(+77 files in other folders)
