[package]
edition = "2024"
name = "hhu_tosr"
version = "0.1.0"
authors = ["Michael Schöttner <michael.schoettner@hhu.de>"]

[lib]
crate-type = ["staticlib"]
path = "src/startup.rs"

[dependencies]
spin = "0.10.0"
x86_64 = "0.15.2"
nolock = { version = "0.4.1", default-features = false, features = ["queues"] }
