[package]
edition = "2024"
name = "os"
version = "0.1.0"
authors = ["Michael Schöttner <michael.schoettner@hhu.de>"]

[lib]
crate-type = ["staticlib"]
path = "src/startup.rs"

[dependencies]
usrlib = { path = "../usrlib" }

spin = "0.10.0"
nolock = { version = "0.4.1", default-features = false, features = ["queues"] }
bitflags = "2.9.0"
tar-no-std = "0.4.2"
